--- a/css/style.scss
+++ b/css/style.scss
@@ -31,18 +31,25 @@ img {
 */
 
 h1 {
-	@include font(2.5);
+	@include font(2);
 	line-height: 1.5em;
-	font-family: "ff-ernestine-web-pro",sans-serif;
+	font-family: "ff-ernestine-web-pro",serif;
 }
 
 h3 {
 	font-style: italic;
+	line-height: 2.5em;
+	font-family: "ff-ernestine-web-pro",serif;
 }
 
 h4 {
 	@include font(.875);
 	color: $dkgrey;
+	line-height: 1.8em;
+}
+
+h5 {
+	line-height: 1em;
 }
 
 h6 {
@@ -54,27 +61,34 @@ p, li {
 	line-height: 1.3em;
 }
 
+span {
+	color: $dkgrey;
+	@include font(.875);
+}
+
 /*
   ========================================
   Header
   ========================================
 */
-// .left-nav {
-// 	background-color: $dkblue;
-// }
-// .right-nav {
-// 	background-color: $orange;
-// }
+
+.hamburger-head {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	ul {
+		display: flex;
+		flex-direction: column;
+	}
+}
 
 header {
 	background-color: $white;
 	padding: .5em;
-	ul {
-		display: inline-block;
-		width: 100%;
-		li {
-			display: inline;
-			margin-right: 20px;
+	nav {
+	position: static;
+		.dropdown {
+			display: none;
 		}
 	}
 	.search-box {
@@ -82,6 +96,14 @@ header {
 		border-radius: 25px;
 		padding: 5px 10px;
 		margin: 10px auto;
+	}
+	ul {
+		display: inline-block;
+		width: 100%;
+		li {
+			display: inline;
+			margin-right: 20px;
+		}
 	}
 }
 
@@ -130,14 +152,33 @@ header {
 	.cover-art {
 		display: flex;
 		flex-direction: column;
-		.blurb {
-			width: 100%;
-			height: 100px;
-			background-color: $white;
-			border-bottom: 1px solid $black;
-			border-right: 1px solid $black;
-			border-left: 1px solid $black;
-			text-align: center;
-		}
+		.cover {
+			margin: 10px 0;
+			.blurb {
+				width: 100%;
+				padding: 0 10px;
+				// height: 150px;
+				background-color: white;
+				border-bottom: 1px solid $black;
+				border-right: 1px solid $black;
+				border-left: 1px solid $black;
+				text-align: center;
+				margin-top: -5px;
+				.icon {
+					width: 50px;
+					position: relative;
+					margin-top: -20px;
+				}
+				.sub-info {
+					display: flex;
+	  				align-items: center;
+	  				justify-content: space-between;
+	  				margin-top: 1em;
+				}
+			}
+		}	
 	}
 }
+
+@import 'tablet';
+
