--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -1,33 +1,29 @@
 @media screen and (min-width:800px) {
 	
+
+	body {
+	// background-color: green;
+}
 	
+
+
 /*
   ========================================
   Header
   ========================================
 */
-.nodesk {
-	display: none;
-}
 
-.hamburger-head {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-	}
-}
 
-header {
-	nav {
-		.dropdown {
-			display: block !important;
-		}
-	}
-}
+
+/*
+  ========================================
+  Stories
+  ========================================
+*/
+
+
+
+
 
 
 
