--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,8 +1,20 @@
-$white: #f9f9f9;
-$grey: #f4f2f2;
-$ltblue: #73e0f9;
-$dkblue: #028ea5;
-$orange: #ef6020;
-$black: #2e3542;
-$dkgrey: #a9a9aa;
-$blue: #279BD3;
+// $white: #f9f9f9;
+// $grey: #f4f2f2;
+// $ltblue: #73e0f9;
+// $dkblue: #028ea5;
+// $orange: #ef6020;
+// $black: #2e3542;
+// $dkgrey: #a9a9aa;
+// $blue: #279BD3;
+
+$white: #FAFAFA;
+$black: #383838;
+$grey: #F2F2F2;
+$dkgrey: #4D4D4D;
+$blue1: #80DEEA;
+$blue2: #4DD0E1;
+$blue3: #00BCD4;
+$blue4: #00ACC1;
+$blue5: #0097A7;
+$blue6: #00838F;
+$orange: #F94A06;
