--- a/css/style.scss
+++ b/css/style.scss
@@ -28,7 +28,7 @@ img {
 .horiz-line-mobile {
 	width: 100%;
 	margin: 0 auto 1em auto;
-	border: 1px solid $dkgrey;
+	border: 1px solid $blue6;
 }
 
 .clear-fix {
@@ -55,7 +55,7 @@ h3 {
 
 h4 {
 	@include font(.875);
-	color: $dkgrey;
+	color: $black;
 	line-height: 0;
 }
 
@@ -64,20 +64,22 @@ h5 {
 }
 
 h6 {
-	color: $dkgrey;
+	color: $black;
 	line-height: .5em;
 }
 
 p, li {
 	@include font(1);
-	line-height: 1.3em;
+	line-height: 1.5em;
+	max-width: 50%;
+	margin: 0 auto;
 }
 
 a {
 	text-decoration: none;
 	color: $black;
 	&:hover {
-		color: $blue;
+		color: $orange;
 	}
 }
 
@@ -88,7 +90,7 @@ a {
 */
 
 header {
-	background-color: $grey;
+	background-color: $white;
 	padding: .5em;
 	h1 {
 		text-align: center;
@@ -149,8 +151,9 @@ header {
 .intro {
 	padding: 2.5em;
 	text-align: center;
-	background-color: $blue;
-	margin: 10px auto;
+	background-color: $blue6;
+	margin: 0 auto;
+	color: $grey;
 	button {
 		border-radius: 25px;
 		background-color: $white;
@@ -179,6 +182,9 @@ header {
 		display: flex;
 		li {
 			margin-right: 20px;
+			&:hover {
+				color: $orange;
+			}
 		}
 	}
 	.search-box-2 {
