--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,12 @@ h1 {
   font-size: 32px;
   font-size: 2em;
   line-height: 1.5em;
-  font-family: "ff-ernestine-web-pro",serif; }
+  font-family: "jubilat",sans-serif; }
 
 h3 {
   font-style: italic;
   line-height: 1em;
-  font-family: "ff-ernestine-web-pro",serif; }
+  font-family: "jubilat",sans-serif; }
 
 h4 {
   font-size: 14px;
