--- a/css/style.scss
+++ b/css/style.scss
@@ -44,13 +44,13 @@ img {
 h1 {
 	@include font(2);
 	line-height: 1.5em;
-	font-family: "ff-ernestine-web-pro",serif;
+	font-family: "jubilat",sans-serif;
 }
 
 h3 {
 	font-style: italic;
 	line-height: 1em;
-	font-family: "ff-ernestine-web-pro",serif;
+	font-family: "jubilat",sans-serif;
 }
 
 h4 {
