--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ p, li {
   font-size: 16px;
   font-size: 1em;
   line-height: 1.5em;
-  max-width: 50%;
+  max-width: 550px;
   margin: 0 auto; }
 
 a {
@@ -275,7 +275,8 @@ header {
     padding: 0; }
     header h1 {
       text-align: left;
-      width: 20%; }
+      width: 20%;
+      margin-left: 10px; }
     header nav {
       position: static;
       display: flex;
