--- a/css/_1200.scss
+++ b/css/_1200.scss
@@ -13,9 +13,9 @@ header {
 	background-color: $white;
 	padding: 0;
 	h1 {
-		text-align: left;
-		width: 20%;
-		margin-left: 10px;
+		// text-align: left;
+		// width: 20%;
+		// margin-left: 10px;
 	}
 	nav {
 		position: static;
@@ -32,7 +32,7 @@ header {
 	}	
 
 	.search-box {
-		border: 1px solid $black;
+		border: 1px solid $orange;
 		border-radius: 25px;
 		padding: 5px 10px;
 		margin: 10px auto;
@@ -54,7 +54,7 @@ header {
 		text-align: center;
 		li {
 			display: inline;
-			margin: 0 20px;
+			margin: 0 25px;
 			color: $white;
 		}
 	}
