--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ header {
 .intro {
   padding: 2.5em;
   text-align: center;
-  background-color: #00838F;
+  background-color: #0097A7;
   margin: 0 auto;
   color: #F2F2F2; }
   .intro button {
@@ -186,6 +186,7 @@ header {
   margin: 1.5em auto;
   background-color: #F2F2F2; }
   .stories ul {
+    margin-left: 12px;
     display: flex; }
     .stories ul li {
       margin-right: 20px; }
@@ -213,9 +214,7 @@ header {
     padding: 0 10px;
     height: 150px;
     background-color: white;
-    border-bottom: 1px solid #383838;
-    border-right: 1px solid #383838;
-    border-left: 1px solid #383838;
+    box-shadow: 0 3px 3px #aeaeae;
     text-align: center;
     margin-top: -5px; }
     .cover .blurb .icon {
@@ -273,10 +272,6 @@ header {
   header {
     background-color: #FAFAFA;
     padding: 0; }
-    header h1 {
-      text-align: left;
-      width: 20%;
-      margin-left: 10px; }
     header nav {
       position: static;
       display: flex;
@@ -288,7 +283,7 @@ header {
       header nav a {
         color: #FAFAFA; }
     header .search-box {
-      border: 1px solid #383838;
+      border: 1px solid #F94A06;
       border-radius: 25px;
       padding: 5px 10px;
       margin: 10px auto;
@@ -305,7 +300,7 @@ header {
       text-align: center; }
       header ul li {
         display: inline;
-        margin: 0 20px;
+        margin: 0 25px;
         color: #FAFAFA; } }
 
 /*# sourceMappingURL=style.css.map */
