--- a/css/style.scss
+++ b/css/style.scss
@@ -25,9 +25,9 @@ img {
 	max-width: 100%;
 }
 
-.horiz-line-mobile {
+.horiz-line {
 	width: 100%;
-	margin: 0 auto 1em auto;
+	margin: 0 auto;
 	border: 1px solid $blue6;
 }
 
@@ -47,14 +47,21 @@ h1 {
 	font-family: "jubilat",sans-serif;
 }
 
+h2 {
+	@include font(1.4);
+	line-height: 1.3em;
+	font-family: "jubilat",sans-serif;
+}
+
 h3 {
 	font-style: italic;
 	line-height: 1em;
 	font-family: "jubilat",sans-serif;
+	@include font(1.5);
 }
 
 h4 {
-	@include font(.875);
+	@include font(1);
 	color: $black;
 	line-height: 0;
 }
@@ -66,6 +73,7 @@ h5 {
 h6 {
 	color: $black;
 	line-height: .5em;
+	@include font(5);
 }
 
 li {
@@ -75,12 +83,23 @@ li {
 	margin: 0 auto;
 }
 
+span {
+	font-style: italic;
+	line-height: 1em;
+	font-family: "jubilat",sans-serif;
+}
+
 a {
 	text-decoration: none;
 	color: $black;
 	&:hover {
 		color: $orange;
 	}
+}
+
+p {
+	@include font(1.2);
+	line-height: 1.3em;
 }
 
 /*
@@ -102,16 +121,15 @@ header {
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
-	align-items: middle; 
+	align-items: center; 
 	.menu {
-		width: 50px;
+		width: 30px;
 	}
 	.dropdown {
 		width: 30%;
 		display: none;
 		padding: 10px;
 		background-color: $white;
-		border: 2px solid $orange;
 		position: absolute;
 		z-index: 1000;
 		width: 140px;
@@ -120,7 +138,16 @@ header {
 	h1 {
 		text-align: center;
 	}
-	p {
+	button {
+		background-color: $orange;
+		border: none;
+		border-radius: 5px;
+		padding: 5px 5px;
+		text-align: right;
+		color: $white;
+		&:hover {
+			cursor: pointer;
+		}	
 	}
 }
 
@@ -150,7 +177,9 @@ header {
 			font-weight: bold;
 		}
 	}
-	.social-icons {
+}
+
+.social-icons {
 		margin: 1em auto 0 auto;
 		height: 30px;
 		display: flex;
@@ -165,20 +194,10 @@ header {
 			}
 		}
 	}
-}
 
 .ad {
 	display: none;
 }
-
-// button {
-// 		border-radius: 25px;
-// 		background-color: $white;
-// 		border: 1px solid $black;
-// 		padding: 5px 15px;
-// 		color: $black;
-// 		margin: 2em 10px 0 10px;
-// 	}	
 
 /*
   ========================================
@@ -188,25 +207,8 @@ header {
 
 .stories {
 	width: 100%;
-	margin: 1.5em auto;
+	margin: 0 auto;
 	background-color: $grey;
-	ul {
-		margin-left: 12px;
-		display: flex;
-		li {
-			margin-right: 20px;
-			&:hover {
-				color: $orange;
-			}
-		}
-	}
-	.search-box-2 {
-		border-radius: 25px;
-		border: 1px solid $black;
-		padding: 5px 10px;
-		margin: 10px auto;
-		width: 100%;
-	}
 }
 
 .cover-art {
@@ -215,42 +217,124 @@ header {
 }
 
 .cover {
-	margin: 10px auto;
+	margin: 10px auto 10px auto;
 	flex-wrap: wrap;
+	max-width: 400px;
 	.cover-img {
 		box-shadow: 0 3px 3px #888888;
+		&:hover {
+			cursor: pointer;
+		}
 	}
 	.blurb {
 		width: 100%;
 		padding: 0 10px;
-		height: 150px;
+		height: 165px;
 		background-color: white;
 		box-shadow: 0 3px 3px #aeaeae;
-		// border-bottom: 1px solid $black;
-		// border-right: 1px solid $black;
-		// border-left: 1px solid $black;
 		text-align: center;
 		margin-top: -5px;
+		&:hover {
+			cursor: pointer;
+		}
 		.icon {
 			width: 50px;
 			position: relative;
 			margin-top: -20px;
 		}
-		.sub-info {
-			display: flex;
-				align-items: center;
-				justify-content: space-between;
-				margin-top: 1em;
-				img {
-					width: 18px;
-				}
+		.more {
+			width: 20px;
+			float: right;
 		}
 	}
-}	
+}
+
+.quote {
+	background-color: $blue6;
+	border-top: 1px solid $blue5;
+	border-bottom: 1px solid $blue5;
+	img {
+		width: 90px;
+		position: absolute;
+		z-index: 0;
+		margin: 1em 0 0 .5em;
+	}
+	p {
+		width: 80%;
+		text-align: center;
+		margin: 3em auto 1em auto;
+		@include font(1.3);
+		line-height: 1.3em;
+		font-weight: bold;
+		z-index: 1000;
+		position: relative;
+	}
+	.credits {
+		text-align: right;
+		margin: 0 1em 1em 0;
+		h3 {
+			@include font(1.2);
+			line-height: 1.3em;
+		}
+		h4 {
+			line-height: 1.5em;
+			@include font(1);
+		}
+	}
+}
+
+.authors {
+	background-color: $blue1;
+	h2, h4 {
+		margin: 1em 0 0 .5em;
+		text-align: center;
+	}
+	img {
+		width: 120px;
+		display: block;
+		margin: 1em auto;
+	}
+	p {
+		margin: 1.5em 1em 1em 1em;
+	}
+	.more {
+			width: 20px;
+			float: right;
+			&:hover {
+				cursor: pointer;
+			}
+		}
+}
+
+/*
+  ========================================
+  Footer
+  ========================================
+*/	
+footer {
+	text-align: center;
+	background-color: $black;
+	padding: .5em 2em 2em 2em;
+	p {
+		color: $white;
+		margin: 1.7em auto .5em auto;
+	}
+	.email {
+		width: 100%;
+		margin: 0 auto 1em auto;
+	}
+	.submit {
+		margin: 0 auto 1em auto;
+	}
+	a, h5 {
+		color: $blue1;
+		line-height: 1.3em;
+	}
+}
 
 
 
 @import '600';
-@import 'tablet';
-@import '1200';
+@import '800';
+@import '1000';
 
